tests/paczka1/small_fuzzy/47881979.err
Error in line 2: S818 S818 68,9
Error in line 3: S818 S205 73,8
Error in line 4: S818 S818 6,9
Error in line 6: cm7Ebuly A802 22,6
Error in line 7: S818 S205 42,6
Error in line 12: S818 A802 52,3
